--- a/bms/template/book_list.html
+++ b/bms/template/book_list.html
@@ -2,6 +2,11 @@
 <html lang="en">
 
 <head>
+  <style>
+    .btn-right {
+      float: right;
+    }
+  </style>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -11,14 +16,6 @@
 <body>
 
   <div class="container mt-3">
-    <style>
-      .btn-right {
-        float: right;
-      }
-    </style>
-
-    <!--获取cookie username显示异常-->
-
     <h2>Book list</h2>
     <table class="table">
       <thead>
@@ -33,7 +30,7 @@
         </tr>
       </thead>
       <tbody>
-        {% for book in book_list %}
+        {% for book in book %}
         <tr>
           <td>{{ book.name }}</td>
           <td>{{ book.author }}</td>
@@ -41,7 +38,7 @@
           <td>{{ book.isbn }}</td>
           <td>{{ book.date }}</td>
           <td>{{ book.number }}</td>
-          <td>{{ book.operator }}</td>
+          <td>{{ book.operator_id }}</td>
           <td>
             <a href="/book_edit/?id={{ book.id }}">编辑</a>
             <a href="/book_del/?id={{ book.id }}">删除</a>
@@ -50,6 +47,31 @@
         {% endfor %}
       </tbody>
     </table>
+
+    <h2>Book info list</h2>
+    <table class="table">
+      <thead>
+        <tr>
+          <th>book_id</th>
+          <th>ISBN</th>
+          <th>position</th>
+          <th>state</th>
+          <th>operator</th>
+        </tr>
+      </thead>
+      <tbody>
+        {% for info in book_info %}
+        <tr>
+          <td>{{ info.book_id }}</td>
+          <td>{{ info.isbn_id }}</td>
+          <td>{{ info.position }}</td>
+          <td>{{ info.state }}</td>
+          <td>{{ info.operator_id }}</td>
+        </tr>
+        {% endfor %}
+      </tbody>
+    </table>
+
   </div>
 
 </body>
