--- a/bms/template/reserve_book.html
+++ b/bms/template/reserve_book.html
@@ -17,12 +17,7 @@
                 {% csrf_token %}
 
                 <div class="input-group mb-3">
-                    <span class="input-group-text">id</span>
-                    <input type="text" class="form-control" name="book_id">
-                </div>
-
-                <div class="input-group mb-3">
-                    <span class="input-group-text">位置</span>
+                    <span class="input-group-text">day</span>
                     <input type="text" class="form-control" name="position">
                 </div>
 
