--- a/bms/template/login.html
+++ b/bms/template/login.html
@@ -1,50 +1,85 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/js/bootstrap.bundle.min.js"></script>
-    <style>
-        .fakeimg {
-            height: 200px;
-            background: #aaa;
-        }
-
-        .container {
-            max-width: 600px;
-            margin: 0 auto;
-        }
-
-        .form-control {
-            box-sizing: border-box;
-            margin-bottom: 10px;
-        }
-
-        .action {
-            text-align: center;
-        }
-    </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>图书管理系统</title>
+    <link href="https://cdn.bootcdn.net/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdn.bootcdn.net/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
 
 <body>
-    <h1 class="text-muted">承瀚海之辽阔</h1>
-    
-    <div class="container p-5 my-5 border">
-
-        <form class="content-wrap" role="form" action="/login/" method="post">
-            <h4 class="text-muted">图书馆信息管理系统</h4>
-
-            {% csrf_token %}
-            <input class="form-control" name="id" type="text" placeholder="UserId">
-            <input class="form-control" name="password" type="password" placeholder="Password">
-
-            <div class="action">
-                <button type="submit" class="btn btn-primary">登录</button>
+    <nav class="navbar navbar-inverse">
+        <div class="container-fluid">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
+                    data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="#">图书管理系统</a>
             </div>
-        </form>
+        </div><!-- /.container-fluid -->
+    </nav>
 
+    <div class="container-fluid">
+        <div class="row">
+            <!-- left -->
+            <div class="col-md-8">
+                <div>
+                    <div>
+                        <br>
+                        <br>
+                        <br>
+                        <br>
+                        <br>
+                        <br>
+                        <br>
+                        <br>
+                        <div container-fluid="text-center" class="text-center">
+                            <h1>承瀚海之辽阔</h1>
+                        </div>
+                        <br>
+                        <br>
+                        <br>
+                        <br>
+                    </div>
+                </div>
+            </div>
+
+            <!-- right -->
+            <div class="col-md-3">
+                <div class="list-group">
+                    <br>
+                    <br>
+                    <br>
+                    <br>
+                    <br>
+                    <br>
+                    <br>
+                    <div>
+                        <form class="content-wrap" role="form" action="/login/" method="post">
+                            {% csrf_token %}
+                            <input class="form-control" name="id" type="text" placeholder="Userid">
+                            <br>
+                            <input class="form-control" name="password" type="password" placeholder="Password">
+                            <br>
+                            <div class="action">
+                                <button type="submit" class="btn btn-primary btn-block">login</button>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-1"></div>
+        </div>
     </div>
 
 </body>
