--- a/bms/template/book_info_add.html
+++ b/bms/template/book_info_add.html
@@ -2,43 +2,107 @@
 <html lang="en">
 
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/js/bootstrap.bundle.min.js"></script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.bootcdn.net/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdn.bootcdn.net/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
+
+
+<script>
+    function getCookie(name) {
+        var arr, reg = new RegExp("(^| )" + name + "=([^;]*)(;|$)");
+        if (arr = document.cookie.match(reg)) return unescape(arr[2]);
+        else return null;
+    }
+</script>
+
 
 <body>
 
-    <div class="container mt-3">
-        <h2>填写图书信息</h2>
-        <p>在下面的输入框内补充信息</p>
-        <div>
-            <form action="/book_info_add/" method="post">
-                {% csrf_token %}
+    <nav class="navbar navbar-inverse">
+        <div class="container-fluid">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
+                    data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                    <span class="sr-only">Toggle navigation</span>
+                </button>
+                <a class="navbar-brand" href="#">图书管理系统</a>
+            </div>
 
-                <div class="input-group mb-3">
-                    <span class="input-group-text">id</span>
-                    <input type="text" class="form-control" name="book_id">
-                </div>
+            <script>
+                var username = getCookie('user_id');
+                if (username != null) {
+                    document.writeln("<a class=\'navbar-brand\' href=\'#\'>欢迎你," + username + "!</a>");
+                }
+            </script>
 
-                <!-- 这里改为选择框 选项图书流通室和图书借览室 -->
-                <!-- <div class="input-group mb-3">
-                    <span class="input-group-text">图书室</span>
-                    <select class="form-select" name="position">
-                        <option value="1">图书流通室</option>
-                        <option value="2">图书借览室</option>
-                    </select>
-                </div> -->
-                <div class="input-group mb-3">
-                    <span class="input-group-text">位置</span>
-                    <input type="text" class="form-control" name="position">
-                </div>
-
-                <button type="submit" class="btn btn-primary">保存</button>
-                <button type="submit" formmethod="get" formaction="/book_add" class="btn btn-default">返回</button>
-            </form>
+            <ul class="nav navbar-nav navbar-right">
+                <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
+                        aria-expanded="false">功能列表<span class="caret"></span></a>
+                    <ul class="dropdown-menu">
+                        <li><a class="dropdown-item" href="/book_put_in/">书目入库</a></li>
+                        <li><a class="dropdown-item" href="/book_process/">审理借书手续</a></li>
+                        <li><a class="dropdown-item" href="/book_list/">书目列表</a></li>
+                        <li><a class="dropdown-item" href="/login/">退出登录</a></li>
+                    </ul>
+                </li>
+            </ul>
         </div>
+    </nav>
+
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-md-3">
+                <div class="list-group">
+                    <a href="#" class="list-group-item active">功能列表</a>
+                    <a href="/book_put_in/" class="list-group-item">书目入库</a>
+                    <a href="/book_process/" class="list-group-item">审核借书手续</a>
+                    <a href="/book_list/" class="list-group-item">书目列表</a>
+                    <a href="/login/" class="list-group-item">退出登录</a>
+                </div>
+            </div>
+            <div class="col-md-9">
+                <div class="panel panel-primary">
+                    <div class="panel-heading">
+                        <h3 class="panel-title">添加图书 &nbsp;<i class="fa fa-book pull-right" aria-hidden="true"></i>
+                        </h3>
+                    </div>
+                    <div class="panel-body">
+                        <div>
+                            <p>补充图书的详细信息</p>
+                            <div>
+                                <form action="/book_info_add/" method="post">
+                                    {% csrf_token %}
+
+                                    <div class="input-group">
+                                        <input type="text" class="form-control" name="book_id" placeholder="book_id">
+                                        <span class="input-group-btn">id</span>
+                                    </div>
+                                    <br>
+                                    <label for="browser" class="form-label">选择图书放入的位置</label>
+                                    <br>
+                                    <input class="form-control" list="browsers" name="position">
+                                    <datalist id="browsers">
+                                        <option value="图书流通室">
+                                        <option value="图书阅览室">
+                                    </datalist>
+                                    <br>
+                                    <button type="submit" class="btn btn-primary mt-3">提交</button>
+                                    <button type="submit" formmethod="get" formaction="/book_put_in/"
+                                        class="btn btn-default mt-3">返回</button>
+                                </form>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
 </body>
 
