--- a/bms/template/librarian/book_edit.html
+++ b/bms/template/librarian/book_edit.html
@@ -1,66 +1,68 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends './layout.html' %}
 
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/js/bootstrap.bundle.min.js"></script>
-</head>
+{% block content %}
+<div class="col-md-9">
+    <div class="panel panel-primary">
 
-<body>
+        <div class="panel-heading">
+            <h3 class="panel-title">编辑书目
+                <i class="fa fa-book pull-right" aria-hidden="true"></i>
+            </h3>
+        </div>
 
-    <div class="container mt-3">
-        <h2>编辑书目属性</h2>
-        <p>请在下面的输入框内输入需要修改的属性</p>
-        <div>
+        <div class="panel-body">
             <form action="/book_edit/?id={{ book.id }}" method="post" enctype="multipart/form-data">
                 <input type="hidden" name="edit_id" value="{{book.id}}" class="hide">
-
                 {% csrf_token %}
+
                 <div class="input-group mb-3">
                     <span class="input-group-text">书名</span>
                     <input type="text" class="form-control" placeholder="书名" name="name" value="{{ book.name }}">
                 </div>
+                <br>
 
                 <div class="input-group mb-3">
                     <span class="input-group-text">作者</span>
                     <input type="text" class="form-control" placeholder="作者" name="author" value="{{ book.author }}">
                 </div>
+                <br>
 
                 <div class="input-group mb-3">
                     <span class="input-group-text">出版商</span>
-                    <input type="text" class="form-control" placeholder="出版商" name="publisher"
-                        value="{{ book.publisher }}">
+                    <input type="text" class="form-control" placeholder="出版商" name="publisher" value="{{ book.publisher }}">
                 </div>
+                <br>
 
                 <div class="input-group mb-3">
                     <span class="input-group-text">ISBN</span>
-                    <input type="text" class="form-control" placeholder="ISBN" name="ISBN" value="{{ book.ISBN }}">
-
+                    <input type="text" class="form-control" placeholder="ISBN" name="ISBN" value="{{ book.isbn }}">
                 </div>
+                <br>
 
                 <div class="input-group mb-3">
                     <span class="input-group-text">出版年月</span>
                     <input type="text" class="form-control" placeholder="出版年月" name="date" value="{{ book.date }}">
                 </div>
+                <br>
 
                 <div class="input-group mb-3">
                     <span class="input-group-text">数量</span>
                     <input type="text" class="form-control" placeholder="数量" name="num" value="{{ book.num }}">
                 </div>
+                <br>
 
-                <div class="input-group mb-3">
+                {% comment %} <div class="input-group mb-3">
                     <span class="input-group-text">经办人</span>
                     <input type="text" class="form-control" placeholder="经办人" name="operator"
                         value="{{ book.operator }}">
                 </div>
+                <br> {% endcomment %}
 
-                <button type="submit" class="btn btn-primary">完成修改</button>
+                <button type="submit" class="btn btn-primary">保存</button>
                 <button type="submit" formmethod="get" formaction="/book_list" class="btn btn-default">返回</button>
             </form>
         </div>
 
-</body>
-
-</html>
+    </div>
+</div>
+{% endblock %}
