--- a/bms/template/librarian/book_edit.html
+++ b/bms/template/librarian/book_edit.html
@@ -17,37 +17,37 @@
 
                 <div class="input-group mb-3">
                     <span class="input-group-text">书名</span>
-                    <input type="text" class="form-control" placeholder="书名" name="name" value="{{ book.name }}">
+                    <input type="text" class="form-control" name="name" value="{{ book.name }}">
                 </div>
                 <br>
 
                 <div class="input-group mb-3">
                     <span class="input-group-text">作者</span>
-                    <input type="text" class="form-control" placeholder="作者" name="author" value="{{ book.author }}">
+                    <input type="text" class="form-control" name="author" value="{{ book.author }}">
                 </div>
                 <br>
 
                 <div class="input-group mb-3">
                     <span class="input-group-text">出版商</span>
-                    <input type="text" class="form-control" placeholder="出版商" name="publisher" value="{{ book.publisher }}">
+                    <input type="text" class="form-control" name="publisher" value="{{ book.publisher }}">
                 </div>
                 <br>
 
                 <div class="input-group mb-3">
                     <span class="input-group-text">ISBN</span>
-                    <input type="text" class="form-control" placeholder="ISBN" name="ISBN" value="{{ book.isbn }}">
+                    <input type="text" class="form-control" name="ISBN" value="{{ book.isbn }}">
                 </div>
                 <br>
 
                 <div class="input-group mb-3">
                     <span class="input-group-text">出版年月</span>
-                    <input type="text" class="form-control" placeholder="出版年月" name="date" value="{{ book.date }}">
+                    <input type="text" class="form-control" name="date" value="{{ book.date }}">
                 </div>
                 <br>
 
                 <div class="input-group mb-3">
                     <span class="input-group-text">数量</span>
-                    <input type="text" class="form-control" placeholder="数量" name="num" value="{{ book.num }}">
+                    <input type="text" class="form-control" name="number" value="{{ book.number }}">
                 </div>
                 <br>
 
