--- a/bms/template/librarian/layout.html
+++ b/bms/template/librarian/layout.html
@@ -32,7 +32,7 @@
             </div>
     
             <script>
-                var username = getCookie('user_id');
+                var username = getCookie('username');
                 if (username != null) {
                     document.writeln("<div class=\'navbar-brand\'>管理员" + username + "</div>");
                 }
