--- a/bms/template/reader/layout.html
+++ b/bms/template/reader/layout.html
@@ -28,7 +28,7 @@
             </div>
     
             <script>
-                var username = getCookie('user_id');
+                var username = getCookie('username');
                 if (username != null) {
                     document.writeln("<div class=\'navbar-brand\'>欢迎你，" + username + "！</div>");
                 }
