--- a/bms/template/reader/layout.html
+++ b/bms/template/reader/layout.html
@@ -26,14 +26,14 @@
             <div class="navbar-header">
                 <a class="navbar-brand" href={% url 'reader_page' %}>图书管理系统</a>
             </div>
-    
+
             <script>
                 var username = getCookie('username');
                 if (username != null) {
-                    document.writeln("<div class=\'navbar-brand\'>欢迎你，" + username + "！</div>");
+                    document.writeln("<div class=\'navbar-brand\'>欢迎你，" + username + "!</div>");
                 }
             </script>
-    
+
             <ul class="nav navbar-nav navbar-right">
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
@@ -62,6 +62,9 @@
                     {# [NOTE] This is WRONG! #}
                     <a class="list-group-item" href={% url 'reader_page' %}>修改密码</a>
                     {# [NOTE] This is WRONG! It should be {% url 'logout' %} #}
+                    <a class="list-group-item" href="#">查看账单</a>
+                    {# [NOTE] There is a property should be added #}
+                    <a class="list-group-item" href={% url 'get_reserve_book' %}>取走预约书籍</a>
                     <a class="list-group-item" href={% url 'login' %}>退出登录</a>
                 </div>
             </div>
